tests/parser/valid/05_var_declarations.src
fn test() {
    int x = 42;
    float y = 3.14;
    string s = "hello";
    bool b = true;
    bool n = null;
}
