tests/parser/invalid/01_missing_semicolon.src
fn test() {
    int x = 42
}
